     An option is supplied to disable this behaviour
   - Added quiet option which allows for logging only of (fatal) 
     internal errors
   - More powerful configuration file parser. In particular
     empty values may be specified and # (hash) characters may
     be in keys or values.
   - Buffered reads from client during authentication (and about time too)


----------------------------------------------------------------------

2nd May 2000
(Horms)

   * Version 0.1.5
   - Removed bug that caused 0.1.4 not to background when in stand
     alone mode.
   - Fixed potential buffer overun problems in perditiondb_mysql
   - Added dbhost configuration parameter to perditiondb_mysql
   - Ported perditiondb_mysql to perditiondb_postgresql
   - POP3 now quits cleanly
   - Will now build on systems without gdbm headers.

----------------------------------------------------------------------

15th April 2000
(Horms)

   * Version 0.1.4
   - Updated perditiondb_mysql so it no longer used the depreciated
     myslq_real_connect. Thanks to Krzysztof Sierota for the patch.
   - Removed missing define that prevented copilation without pam
   - Logs local address connected to as well as client address
     when in stand alone mode. (Logs address bound to on Solaris)
     system_uname global documented for perditiondb use
     peername and sockname global added and documented for perditiondb use
   - Tidied up a few minor build problems under FreeBSD 3.4


----------------------------------------------------------------------

20th March 2000
(Wim Bonis <bonis@solution-service.de>)

    - A map can give a answer including a new username
      The map can return [username@]servername[:port],
      The backend server is the contacted via this username
    - The Regex Map can now expand Variable in the for $n
      eg. a map "([^.]*)@([^.]*)\.(.*):       $1_$2_$3@realserver"
      will expand a username
      "bonis@solution-service.de" to "bonis_solution-service_de@realserver"
