@@ -7,9 +7,7 @@ Copyright (C) 1999  Horms <horms@vergenet.net>
 
 *  Make man page (from infromation in README)
 *  Option to force lowercase before map lookup
-*  Support for empty passwords
 *  Support for a backup MySQL server
-*  Make logger for perdition itself
 *  tdb module
 
 From Daniel Rosen
