@@ -43,6 +43,7 @@ xxx
      empty values may be specified and # (hash) characters may
      be in keys or values.
    - Buffered reads from client during authentication (and about time too)
+   - Empty passwords are accepted. This is a mechanism, not a policy.
 
 
 ----------------------------------------------------------------------
